--- a/themes/hugoplate/layouts/baseof.html
+++ b/themes/hugoplate/layouts/baseof.html
@@ -14,6 +14,8 @@
     <!-- style (always cache it) -->
     {{ partialCached "essentials/style.html" . }}
 
+    <!-- Netlify Identity Widget -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
 
   <body>
